<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HydrateReminder</string>

    <string name="retour_page_prec"> Retour à la page précédente</string>
    //Accueil
    <string name="obj_semaine">Cette semaine (total) :  x /objectif</string>
    <string name="obj_mois">Ce mois (total) :  x /objectif</string>
    <string name="parametres"> Paramètres</string>
    <string name="dessin_gourde">Image d\'une gourde avec son niveau</string>
    <string name="dessin_goutte_eau">Image d\'une goutte d\'eau</string>

    //Menu principal
    <string name="chgmt_gourde">Changement / ajout de gourde</string>
    <string name="notif">Notifications (Luminosité, vibration, audio) </string>
    <string name="def_obj">Définition des objectifs d’hydratation </string>
    <string name="perso_appli_et_access">Personnalisation et accessibilité de l’application </string>
    <string name="btn_tests_arduino">Test avec carte Aduino (à supprimer) </string>


    //Changement de gourde
    <string name="gourde1">Gourde 1</string>
    <string name="ajouter">Ajouter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Badges
    <string name="niveau_Actuel">Niveau actuel</string>
    <string name="badges_acquis">Badges acquis</string>
    <string name="badges_non_acquis">Badges non acquis</string>
    <string name="titre_badges">Badges </string>

    //Recalibrage 1 et 2
    <string name="recalibrage">Recalibrage</string>
    <string name="consigne1">Poser la gourde vide sur le socle </string>
    <string name="gourde_calibree">Gourde calibrée ! </string>
    <string name="nom_gourde">Nom de la gourde</string>
    <string name="nb_cl"> Nombre de centilitre (cl) que peut contenir la gourde </string>
    <string name="valider">Valider</string>
    <string name="fleche_bas">Flèche en direction du socle vers le bas</string>
    <string name="socle">Socle</string>
    <string-array name="nb_l_array"> Quelle est sa contenance ?
        <item>0.50 L</item>
        <item>0.75 L</item>
        <item>1 L </item>
        <item>1.50 L</item>
        <item>2.0 L</item>
        <item>Je ne sais pas </item>
    </string-array>

    //Notifications
    <string name="notifications">Notifications</string>
    <string name="luminosite">Lumières</string>
    <string name="vibrations">Vibrations</string>
    <string name="audio_sonneries">Audio et sonneries </string>

    // Notifs lumineuses
    <string name="notifs_lumineuses">Notifications lumineuses </string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="couleur_choisie">La couleur choisie est : </string>
    <string name="bleu">Bleu </string>
    <string name="orange">Orange </string>
    <string name="vert">Vert </string>
    <string name="rouge">Rouge</string>
    <string name="violet">Violet </string>
    <string name="jaune">Jaune </string>
    <string name="selection_couleur">Selectionner une couleur</string>

    //Notifs vibrations
    <string name="notifs_vibrations">Notification vibratoires</string>
    <string name="faible">Faible</string>
    <string name="moyen">Moyen</string>
    <string name="fort">Fort</string>

    //Notifs audios
    <string name="notifs_sonores">Notifications sonores </string>
    <string name="audio1">Audio1</string>
    <string name="audio2">Audio2</string>
    <string name="audio3">Audio3</string>
    <string name="audio_perso"> Mes audios persos </string>

    //Objectifs d'hydratation
    <string name="objectif_hydratation">Objectif d\'hydratation</string>
    <string name="nb_cl_par_jour">Nombre de centilitre / jour</string>
    <string name="question_hydratation">Quelle quantité voulez vous boire par jour ? </string>
    <string name="min_et_reco">Minimum : 1L    \nMaximum : 3,5L </string>
    <string name="rappels">Rappels tous les : </string>
    <string name="trente_min">30 minutes</string>
    <string name="une_heure">1 heure</string>
    <string name="deux_heures">2 heures</string>
    <string name="min">min</string>
    <string name="personalisation">Personnalisation du temps</string>
    <string name="espace_perso"> 0123... </string>

    //Graph
    <string name="titre_graph">Consommation sur la semaine</string>

    //Tests Arduino
    <string name="titre_test_arduino">Test avec la carte Arduino</string>
    <string name="connection">Connection </string>
    <string name="deconnection">Deconnection</string>
    <string name="message_co">Statut </string>
    <string name="en_attendant">En attendant </string>

    //Calcul contenant
    <string name="consigne2">Pas d\'inquiétude ! \nRemplissez la totalement et posez la gourde pleine sur le socle</string>

</resources>