<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Objectifs_hydratation"

    android:background="@color/fond_appli"
    android:theme="@style/text_color">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal"
        android:theme="@style/titles">

        <ImageView
            android:id="@+id/iV_retour_oh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/tV_obj_hydratation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/objectif_hydratation" />
    </LinearLayout>

    <EditText
        android:id="@+id/eTN_cl_par_jour"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/nb_cl_par_jour"
        android:layout_marginTop="35sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tV_min_et_recommande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_et_reco"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tV_rappels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="20sp"
        android:text="@string/rappels"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rB_30min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20sp"
            android:text="@string/trente_min"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rB_1h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20sp"
            android:text="@string/une_heure"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rB_2h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20sp"
            android:text="@string/deux_heures"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:textSize="20sp" >

            <RadioButton
                android:id="@+id/rB_perso_temps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/texte_appli"
                android:text="@string/personalisation" />

            <EditText
                android:id="@+id/eTN_perso_temps"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/espace_perso"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/texte_appli"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textColor="@color/texte_appli"
                />
        </LinearLayout>

    </RadioGroup>

    <Button
        android:id="@+id/btn_valider_obj_hyd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fond_boutons"
        android:text="@string/valider"
        android:textColor="@color/texte_appli" />

</LinearLayout>