<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tests_arduino">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/titre_test_arduino"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_connection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/connection" />

        <Button
            android:id="@+id/btn_deconnection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/deconnection" />
    </LinearLayout>

    <TextView
        android:id="@+id/tV_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_co" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="95sp"
        android:text="@string/en_attendant" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="95sp"
        android:text="@string/en_attendant" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="95sp"
        android:text="@string/en_attendant" />

</LinearLayout>