<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Recalibrage2"
    android:background="@color/fond_appli"
    android:theme="@style/text_color">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iV_retour_r2"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/tV_Recalibrage2"
            android:layout_width="346dp"
            android:layout_height="66dp"
            android:text="@string/recalibrage" />

    </LinearLayout>

    <TextView
        android:id="@+id/tV_gourde_calibree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gourde_calibree"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/eTT_nom_gourde"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nom_gourde" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/nb_cl"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:textColor="@color/texte_appli"
        android:backgroundTint="@color/fond_boutons"/>

</LinearLayout>