<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Notifs_lumineuses"
    android:background="@color/fond_appli"
    android:theme="@style/text_color"
   >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/titles">

        <ImageView
            android:id="@+id/iV_retour_nl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/retour_page_prec"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/tV_notifs_lumineuses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/notifs_lumineuses" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_oui_notif_lum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oui"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/fond_boutons"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_non_notif_lum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/non"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/fond_boutons"
            android:textColor="@color/texte_appli"
            android:textSize="20sp"

            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/groupe_couleurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="30sp"
        android:textSize="20sp"
        android:layout_gravity="center">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bleu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bleu"
                android:text="@string/bleu"
                android:textColor="@color/bleu"
                android:textSize="0sp"
                app:strokeColor="@color/texte_appli"
                app:strokeWidth="2sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/orange"
                android:textColor="@color/orange"
                android:textSize="0sp"
                app:strokeColor="@color/texte_appli"
                app:strokeWidth="2sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_vert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/vert"
                android:text="@string/vert"
                android:textColor="@color/vert"
                android:textSize="0sp"
                app:layout_column="2"
                app:layout_row="0"
                app:strokeColor="@color/texte_appli"
                app:strokeWidth="2sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rouge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rouge"
                android:text="@string/rouge"
                android:textColor="@color/rouge"
                android:textSize="0sp"
                app:layout_column="3"
                app:layout_row="0"
                app:strokeColor="@color/texte_appli"
                app:strokeWidth="2sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_jaune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/jaune"
                android:text="@string/jaune"
                android:textColor="@color/jaune"
                android:textSize="0sp"
                app:layout_column="2"
                app:layout_row="1"
                app:strokeColor="@color/texte_appli"
                app:strokeWidth="2sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_violet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/violet"
                android:text="@string/violet"
                android:textColor="@color/violet"
                android:textSize="0sp"
                app:layout_column="1"
                app:layout_row="1"
                app:strokeColor="@color/texte_appli"
                app:strokeWidth="2sp" />

        </androidx.gridlayout.widget.GridLayout>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/choix_couleur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tV_couleur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="2"
            android:backgroundTint="@color/fond_boutons"
            android:text="@string/couleur_choisie"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_couleur_choisie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:text="@string/selection_couleur"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_valider_notif_lum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/fond_boutons"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

</LinearLayout>