<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_appli"
    android:orientation="vertical"
    tools:context=".Menu_Principal">

    <ImageView
        android:id="@+id/iV_retour_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/btn_chgmt_gourde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/fond_boutons"
        android:text="@string/chgmt_gourde"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/fond_boutons"
        android:text="@string/notif"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_def_obj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/fond_boutons"
        android:text="@string/def_obj"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_perso_appli_et_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/fond_boutons"
        android:text="@string/perso_appli_et_access"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_test_arduino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="30sp"
        android:layout_weight="1"
        android:backgroundTint="@color/fond_boutons"
        android:text="@string/btn_tests_arduino"
        android:textColor="@color/texte_appli"
        android:textSize="20sp"/>

</LinearLayout>