<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Notifs_vibrations"
    android:background="@color/fond_appli"
    android:theme="@style/text_color">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/titles">

        <ImageView
            android:id="@+id/iV_retour_nv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/tV_notifs_vibrations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/notifs_vibrations" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_oui_notif_vib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oui"
            android:layout_marginTop="35sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/fond_boutons"
            android:textColor="@color/texte_appli"
            android:textSize="20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_non_notif_vib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/non"
            android:layout_marginTop="35sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/fond_boutons"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/groupe_vibrations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rB_faible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faible"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:textSize="20sp"
            android:textColor="@color/texte_appli" />

        <RadioButton
            android:id="@+id/rB_moyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moyen"
            android:layout_marginTop="35sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/fond_boutons"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rB_fort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fort"
            android:layout_marginTop="35sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/fond_boutons"
            android:textColor="@color/texte_appli"
            android:textSize="20sp"  />
    </RadioGroup>

    <Button
        android:id="@+id/btn_valider_notif_vib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_marginTop="35sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/fond_boutons"
        android:textColor="@color/texte_appli"
        android:textSize="20sp" />

</LinearLayout>