<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_appli"
    android:orientation="vertical"
    android:theme="@style/text_color"
    tools:context=".Notifs_sonores">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/titles">

        <ImageView
            android:id="@+id/iv_retour_ns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/tV_notifs_sonores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/notifs_sonores" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_oui_notif_son"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:backgroundTint="@color/fond_boutons"
            android:text="@string/oui"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_non_notif_son"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:backgroundTint="@color/fond_boutons"
            android:text="@string/non"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/groupeAudios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rB_audio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:text="@string/audio1"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rB_audio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:text="@string/audio2"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rB_audio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            android:text="@string/audio3"
            android:textColor="@color/texte_appli"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_valider_notifs_sons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/fond_boutons"
        android:textColor="@color/texte_appli"
        android:textSize="20sp"/>

</LinearLayout>