<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_appli"
    android:orientation="vertical"
    android:theme="@style/text_color"
    tools:context=".Changement_de_gourde">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iV_retour_cdg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/tV_chgmt_gourde"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chgmt_gourde"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_gourde1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gourde1" />

    <Button
        android:id="@+id/btn_ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter" />

</LinearLayout>